[SE2R-79] Correction of tests